# ego-zero

./: Bridge.cpp  Bridge.h  CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  Game.cpp  Game.h  Game.py  GameTest.py  GameUI.py  LICENSE  Logger.py  MCTS.cpp  MCTS.h  MCTS.py  Main.cpp  Main.py  Model.cpp  Model.h  Network.py  SampleSet.py  SelfPlay.cpp  SelfPlay.h  SelfPlay.py  Train.py  Utils.cpp  Utils.h  Utils.py  WatchAgent.py  make.sh  start.sh  stop.sh
test/: GameTest.cpp  MCTSTest.cpp  ModelTest.cpp  TestAssistant.cpp
train/: Bridge.py  ConfigReader.py  Game.py  GameUI.py  Logger.py  MCTS.py  Main.py  MainCpp.py  Network.py  README.md  Train.py  Utils.py  WatchAgent.py  application.conf  start.sh  stop.sh
